# litho-sim-gpu

./: .gitignore  README.md  pyproject.toml
benchmarks/: run_all.py
src/: __init__.py
src/distributed/: tile_worker.py
src/geometry/: polygon_ops.py
src/kernels/: aerial_image.py
src/models/: hotspot_net.py
tests/: test_pipeline.py
